# server/src/interface/docs/swagger.json
@@ -22,24 +22,28 @@
   ],
   "tags": [
     {
-      "name": "Users",
-      "description": "Ação do usúario ligado a sua conta e perfil"
-    },
-    {
-      "name": "Teachers",
-      "description": "Ação da entidade Teacher (monitor), especificamente"
-    },
-    {
-      "name": "Students",
-      "description": "Ação da entidade Students (Aluno), especificamente"
+      "name": "Classes",
+      "description": "Ação da entidade Classes (Classe), especificamente"
     },
     {
       "name": "Levels",
       "description": "Ação da entidade Levels (Nível), especificamente"
     },
     {
-      "name": "Classes",
-      "description": "Ação da entidade Classes (Classe), especificamente"
+      "name": "Schedules",
+      "description": "Ação da entidade Schedules (Escalas), especificamente"
+    },
+    {
+      "name": "Students",
+      "description": "Ação da entidade Students (Aluno), especificamente"
+    },
+    {
+      "name": "Teachers",
+      "description": "Ação da entidade Teacher (monitor), especificamente"
+    },
+    {
+      "name": "Users",
+      "description": "Ação do usúario ligado a sua conta e perfil"
     }
   ],
   "paths": {
@@ -1762,6 +1766,366 @@
                 "example": {
                   "success": false,
                   "errors": [{ "message": "Erro ao encotrar o Classe" }]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/schedules/create": {
+      "post": {
+        "tags": ["Schedules"],
+        "summary": "Criar um escala na aplicação",
+        "description": "Adicionar novo dado",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "example": {
+                  "teacherId": "string",
+                  "startDate": "Date",
+                  "endDate": "Date",
+                  "classId": "string"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "escala criado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                },
+                "example": {
+                  "success": true,
+                  "data": { "scheduleId": "string" }
+                }
+              }
+            }
+          },
+          "400-500": {
+            "description": "Erro no cadastro",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": {
+                  "success": false,
+                  "errors": [
+                    {
+                      "message": "Erro ao criar a escala",
+                      "field": "teacherId"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/schedules/search": {
+      "get": {
+        "tags": ["Schedules"],
+        "summary": "Busca e listagem das escalas da ebd",
+        "description": "busca por filtro e paginação",
+        "parameters": [
+          {
+            "name": "teacherId",
+            "in": "query",
+            "description": "Id do professor da escala",
+            "schema": {
+              "type": "string"
+            },
+            "allowReserved": true
+          },
+          {
+            "name": "classId",
+            "in": "query",
+            "description": "Id da classe da escala",
+            "schema": {
+              "type": "string"
+            },
+            "allowReserved": true
+          },
+          {
+            "name": "startDate",
+            "in": "query",
+            "description": "data de inicio da escala",
+            "schema": {
+              "type": "date"
+            },
+            "allowReserved": true
+          },
+          {
+            "name": "endDate",
+            "in": "query",
+            "description": "data de fim da escala",
+            "schema": {
+              "type": "date"
+            },
+            "allowReserved": true
+          },
+          {
+            "name": "pageNumber",
+            "in": "query",
+            "description": "Página atual",
+            "required": false,
+            "schema": {
+              "type": "number"
+            },
+            "allowReserved": true
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "Quantidade de elementos por página",
+            "required": false,
+            "schema": {
+              "type": "number"
+            },
+            "allowReserved": true
+          },
+          {
+            "name": "orderBy",
+            "in": "query",
+            "description": "Quantidade de elementos por página",
+            "required": false,
+            "schema": {
+              "type": "string[]"
+            },
+            "allowReserved": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "listas das escalas com base o filtros",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                },
+                "example": {
+                  "success": "boolean",
+                  "data": [
+                    {
+                      "teacherId": "string",
+                      "startDate": "Date",
+                      "endDate": "Date",
+                      "classId": "string",
+                      "classes": {
+                        "name": "string",
+                        "description": "string"
+                      },
+                      "teachers": {
+                        "teacherId": "string",
+                        "personId": "string",
+                        "position": "string",
+                        "trainingYear": "DateTime",
+                        "createdAt": "DateTime",
+                        "updatedAt": "DateTime"
+                      }
+                    }
+                  ],
+                  "currentPage": "number;",
+                  "totalPages": "number;",
+                  "totalCount": "number;",
+                  "pageSize": "number;",
+                  "hasPreviousPage": "boolean",
+                  "hasNextPage": "boolean"
+                }
+              }
+            }
+          },
+          "400-500": {
+            "description": "Erro na busta da listagem",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": {
+                  "success": false,
+                  "errors": [
+                    {
+                      "message": "Erro ao listar as escalas"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/schedules/{scheduleId}": {
+      "get": {
+        "tags": ["Schedules"],
+        "summary": "Dados da escala",
+        "description": "Retorna as informações da escala",
+        "parameters": [
+          {
+            "name": "scheduleId",
+            "in": "path",
+            "description": "Id da escala",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Entidade schedule",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                },
+                "example": {
+                  "success": true,
+                  "data": {
+                    "teacherId": "string",
+                    "startDate": "Date",
+                    "endDate": "Date",
+                    "classId": "string",
+                    "classes": {
+                      "name": "string",
+                      "description": "string"
+                    },
+                    "teachers": {
+                      "teacherId": "string",
+                      "personId": "string",
+                      "position": "string",
+                      "trainingYear": "DateTime",
+                      "createdAt": "DateTime",
+                      "updatedAt": "DateTime"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400-500": {
+            "description": "Erro na busca de dados",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": {
+                  "success": false,
+                  "errors": [{ "message": "Erro ao encotrar a escala" }]
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["Schedules"],
+        "summary": "Alterar os dados da escala",
+        "description": "Faça a alteração dos dados da escala",
+        "parameters": [
+          {
+            "name": "scheduleId",
+            "in": "path",
+            "description": "Id da escala",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "example": {
+                  "teacherId": "string",
+                  "startDate": "Date",
+                  "endDate": "Date",
+                  "classId": "string"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Dados alterados com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                },
+                "example": {
+                  "success": true,
+                  "data": {
+                    "message": "Dados alterados com sucesso"
+                  }
+                }
+              }
+            }
+          },
+          "400-500": {
+            "description": "Erro ao alterar os dados",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                },
+                "example": {
+                  "success": false,
+                  "errors": [
+                    { "message": "Dados inválidos", "field": "startDate" }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Schedules"],
+        "summary": "Eliminar a Entidade",
+        "description": "Remove os Dados da escala informada",
+        "parameters": [
+          {
+            "name": "scheduleId",
+            "in": "path",
+            "description": "Id da escala",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Remover uma schedule",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                },
+                "example": {
+                  "success": true,
+                  "data": {
+                    "scheduleId": "string"
+                  }
+                }
+              }
+            }
+          },
+          "400-500": {
+            "description": "Erro na busca de dados",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": {
+                  "success": false,
+                  "errors": [{ "message": "Erro ao encotrar o escala" }]
                 }
               }
             }
